fix event overflow issue

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -118,3 +118,4 @@ body
       border-top 1px solid primary-border-color
       padding 5px 10px
       text-align left
+      overflow hidden
